src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Owner_Equals_Logged_In_User__c</fullName>
        <description>Is the account owner of this contact the same as the currently logged-in Salesforce user?</description>
        <formula>Account.Owner.Id = $User.Id</formula>
        <inlineHelpText>Is the account owner of this contact the same as the currently logged-in Salesforce user?</inlineHelpText>
        <label>Account Owner Equals Logged In User?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <formula>Account.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts2</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Relationship_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts1</relationshipLabel>
        <relationshipName>Contacts_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_State__c</fullName>
        <formula>Account.BillingState</formula>
        <label>Account State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type_From_Account__c</fullName>
        <formula>TEXT(Account.Account_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type_From Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>YEAR(TODAY()) - YEAR( Birthdate ) - IF(OR (MONTH(TODAY()) &lt; MONTH( Birthdate ),AND(MONTH(TODAY()) == MONTH( Birthdate ),DAY(TODAY()) &lt; DAY( Birthdate ))),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assign_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assign Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AssistantEmail__c</fullName>
        <label>Assistant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Assistant_Email__c</fullName>
        <label>Assistant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CSM_Equals_Logged_In_User__c</fullName>
        <formula>Account.CSM__c  = $User.Id</formula>
        <label>CSM Equals Logged In User?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSM_ID_From_Account__c</fullName>
        <formula>Account.CSM__c</formula>
        <label>CSM ID_From Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSM__c</fullName>
        <formula>Account.CSM__r.FirstName &amp;&quot; &quot;&amp;  Account.CSM__r.LastName</formula>
        <label>CSM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email_Parse__c</fullName>
        <description>Looks to email field and parses email domain information from the email address. This is utilized in automation surrounding new leads with no accounts.</description>
        <formula>IF(Email&lt;&gt;NULL,SUBSTITUTE(Email, LEFT(Email, FIND(&quot;@&quot;, Email)), NULL),NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Looks to email field and parses email domain information from the email address. This is utilized in automation surrounding new leads with no accounts.</inlineHelpText>
        <label>Contact Email Parse</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Grouping__c</fullName>
        <label>Contact Grouping</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dr Bimal&apos;s CMO list</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_ID_Long__c</fullName>
        <formula>Id 
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1) 
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1) 
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1)</formula>
        <label>Contact ID_Long</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Owner_2__c</fullName>
        <label>Contact Owner 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Account_Status__c</fullName>
        <formula>TEXT(Account.Account_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <formula>TEXT( MONTH( Birthdate ) ) + &apos;/&apos; + TEXT( DAY( Birthdate ) ) + &apos;/&apos; + TEXT( YEAR( Birthdate ) ) + &apos; &apos;+&apos;Age:(&apos;+ TEXT(Age__c) +&apos;)&apos;</formula>
        <label>Date Of Birth</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Did_we_interact_with_prospect_at_event__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Did we interact with the prospect at an event?</description>
        <label>Include in pre-event email marketing?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employees_From_Account__c</fullName>
        <formula>Account.NumberOfEmployees</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employees_From Account</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the contact needs to be approved for an event by Chief Commercial Officer -- mark this box</description>
        <inlineHelpText>If the contact needs to be approved for an event by Chief Commercial Officer -- mark this box</inlineHelpText>
        <label>Event approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Inside_Sales_From_Account__c</fullName>
        <formula>Account.Exclude_from_Inside_Sales_Lead_Gen__c</formula>
        <label>Exclude from Inside Sales_From Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fortune_100__c</fullName>
        <formula>Account.Fortune_100__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fortune 100</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fortune_500__c</fullName>
        <formula>Account.Fortune_500__c = TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fortune 500</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Goes_By__c</fullName>
        <description>Nickname or how person prefers to be addressed vs what may appear in name field.</description>
        <label>Goes By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive_Left_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the contact is no longer with this organization.  Do not delete contacts in SF.com as we want to retain the account history.</inlineHelpText>
        <label>Inactive/Left Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactive_phone_number__c</fullName>
        <label>Inactive phone number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Include_in_Client_Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in Client Newsletter?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_in_Client_Strategy_Calls_Emails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in Client Strategy Calls/Emails?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the contact</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <formula>LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Task_Event_by_Livongo_Rep_From_Acct__c</fullName>
        <formula>Account.Last_Task_Event_by_Livongo_Rep__c</formula>
        <label>Last Task/Event by Livongo Rep_From Acct</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Email_Parse__c</fullName>
        <label>Lead Email Parse</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_No_Acct_Found_Via_Email_Parse_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead No Acct Found Via Email Parse Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Details__c</fullName>
        <label>Lead Source Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Payer</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LinkedIn__c</fullName>
        <description>LinkedIn profile or corporate profile</description>
        <label>LinkedIn</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MC4SF__MC_Subscriber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MC Subscriber</label>
        <referenceTo>MC4SF__MC_Subscriber__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Management_Level__c</fullName>
        <label>Management Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C-Suite</fullName>
                </value>
                <value>
                    <fullName>Division</fullName>
                </value>
                <value>
                    <fullName>Department</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Relationship_Strength__c</fullName>
        <label>Marketing Relationship Strength</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Friendly</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Strategic</fullName>
                </value>
                <value>
                    <fullName>Distant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Suppressed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Suppressed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Middle__c</fullName>
        <description>Middle name or initial</description>
        <inlineHelpText>Middle name or initial</inlineHelpText>
        <label>Middle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migrated_myStrength_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denote myStrength migrated contacts</description>
        <label>Migrated myStrength Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Open_Opp_Count_From_Acct__c</fullName>
        <formula>Account.Open_Opportunity_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Opp Count_From Acct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt Into Latest Event Invite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opt_out_of_commercial_marketing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check this box if a contact has instructed you to not send him/her email marketing communciations</inlineHelpText>
        <label>Opt out of commercial marketing?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_From_Account__c</fullName>
        <formula>Account.Owner.FirstName &amp;&quot; &quot;&amp; Account.Owner.LastName</formula>
        <label>Owner_From Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Next_Birthday__c</fullName>
        <formula>IF ( MONTH (Birthdate)=2 &amp;&amp; DAY (Birthdate)=29,
    IF ((DATE (YEAR(TODAY()),1,1) + 59)  &gt; TODAY(),
         (DATE (YEAR(TODAY()),1,1)) + 59,
         (DATE (YEAR(TODAY())+1,1,1)) + 59),
    IF (DATE (YEAR(TODAY()),MONTH(Birthdate),DAY(Birthdate)) &gt; TODAY(),
         DATE (YEAR(TODAY()),MONTH(Birthdate),DAY(Birthdate)),
         DATE (YEAR(TODAY())+1,MONTH(Birthdate),DAY(Birthdate))
       )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Swaggable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Swaggable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__TMA_CM_Trigger_Value__c</fullName>
        <label>TMA CM Trigger Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__TMA_Last_Sent__c</fullName>
        <description>Denotes the last time the TMA was sent.</description>
        <label>TMA Last Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parent_Account_From_Account__c</fullName>
        <formula>Account.Parent.Name</formula>
        <label>Parent Account_From Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Playbooks_Next_Step_Due_Date__c</fullName>
        <description>Shows the date when the next set of Playbooks tasks are due.</description>
        <label>Playbooks Next Step Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Playbooks_Play_Name__c</fullName>
        <label>Playbooks Play Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Playbooks_Play_Status__c</fullName>
        <label>Playbooks Play Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Playbooks_Step_Number__c</fullName>
        <label>Playbooks Step Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Power_of_1__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Contacts_PO1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preferred_Shipping_Address__c</fullName>
        <label>Preferred Shipping Address</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mailing Address</fullName>
                    <default>true</default>
                    <label>Mailing Address</label>
                </value>
                <value>
                    <fullName>Other Address</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Promoter_or_Detractor__c</fullName>
        <inlineHelpText>Is this contact an advocate for Livongo, or an obstacle?</inlineHelpText>
        <label>Promoter or Detractor?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Promoter</fullName>
                </value>
                <value>
                    <fullName>Detractor</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider_Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Referenceable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Referenceable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Jr.</fullName>
                </value>
                <value>
                    <fullName>Sr.</fullName>
                </value>
                <value>
                    <fullName>2nd</fullName>
                </value>
                <value>
                    <fullName>II</fullName>
                </value>
                <value>
                    <fullName>III</fullName>
                </value>
                <value>
                    <fullName>IV</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>VI</fullName>
                </value>
                <value>
                    <fullName>Esq.</fullName>
                </value>
                <value>
                    <fullName>CPA</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DDS</fullName>
                </value>
                <value>
                    <fullName>VM</fullName>
                </value>
                <value>
                    <fullName>JD</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>PhD</fullName>
                </value>
                <value>
                    <fullName>(Ret.)</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>USA (Ret.)</fullName>
                </value>
                <value>
                    <fullName>USAF</fullName>
                </value>
                <value>
                    <fullName>USAF (Ret.)</fullName>
                </value>
                <value>
                    <fullName>USMC</fullName>
                </value>
                <value>
                    <fullName>USMCR</fullName>
                </value>
                <value>
                    <fullName>USN</fullName>
                </value>
                <value>
                    <fullName>USN (Ret.)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_From_Account__c</fullName>
        <formula>TEXT(Account.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type_From Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ddc_prospector__Sourced_from_Data_com__c</fullName>
        <description>Used by Data.com Prospector Reports</description>
        <formula>IF(OR(CONTAINS(TEXT(LeadSource),&quot;Jigsaw&quot;),CONTAINS(TEXT(LeadSource),&quot;Data.com&quot;)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sourced from Data.com</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isdc_closedate__c</fullName>
        <description>The date that the Neuralytics model was last run to re-evaluate the quality of the lead, and the score updated.</description>
        <label>Playbooks Contact Close Score Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>isdc_closescore__c</fullName>
        <label>Playbooks Contact Close Score</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isdc_closescoregrade__c</fullName>
        <description>Define scoring by something other than a Close Score. Example: A, B, C, D or High, Medium, Low.</description>
        <label>Playbooks Contact Close Score Grade</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>myStrengthContactExternalId__c</fullName>
        <description>myStrength contact external id</description>
        <externalId>true</externalId>
        <label>myStrengthContactExternalId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Celigo_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Celigo Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__NetSuite_Customer_Id__c</fullName>
        <formula>Account.netsuite_conn__NetSuite_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NetSuite Customer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__NetSuite_Id__c</fullName>
        <externalId>true</externalId>
        <label>NetSuite Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>netsuite_conn__NetSuite_Sync_Err__c</fullName>
        <label>NetSuite Sync Error</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Push_To_NetSuite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Push To NetSuite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Pushed_From_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pushed From Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Sync_In_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync In Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Needs_Score_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Pardot Scoring Categories. Indicates that new scores will soon be synced from Pardot for this contact.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Needs Score Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Last_Scored_At__c</fullName>
        <description>Used for Pardot Scoring Categories. Indicates the last time a Scoring Category score was updated for this contact.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Pardot Last Scored At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Pardot Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Pardot campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Pardot Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Pardot Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when a Pardot tracked anonymous visitor first became a known prospect.</description>
        <label>Pardot Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Pardot Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Pardot Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Pardot created date represents the date and time at which the Prospect record was created in Pardot. This will often differ from your Salesforce.com created date.</description>
        <label>Pardot Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Pardot First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the search term.</description>
        <label>Pardot First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <label>Pardot First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <label>Pardot First Referrer</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Pardot grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Pardot Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Pardot Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__pardot_hard_bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that determines whether contact hard bounced.</description>
        <label>Pardot Hard Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Pardot score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>